--- a/components/get_data/conda.yml
+++ b/components/get_data/conda.yml
@@ -3,10 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13.0
+  - python=3.10
   - pip=24.3.1
   - requests=2.31.0
-  #- pyarrow=15.0.0 # not compatible with python 3.13
+  - pyarrow=15.0.0 # not compatible with python 3.13
   - pip:
       - mlflow==3.3.2
       - wandb==0.21.3
