--- a/src/eda/conda.yml
+++ b/src/eda/conda.yml
@@ -3,13 +3,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
+  - python=3.10
   - hydra-core=1.3.2
-  - matplotlib=3.10.6
+  - matplotlib=3.8.4
   - pandas=2.3.2
-  - pip=24.3.1
-  - scikit-learn=1.3.2
   - jupyterlab=4.4.7
+  - scikit-learn=1.3.2
+  - pip=24.3.1
+  - ydata-profiling=4.15.1
+  - ipywidgets=8.1.3
   - pip:
       - mlflow==3.3.2
       - wandb==0.21.3
